[gd_scene load_steps=64 format=3 uid="uid://d0tmn2yr7n018"]

[ext_resource type="Script" path="res://scripts/general/level_manager.gd" id="1_p2g6v"]
[ext_resource type="Texture2D" uid="uid://b2j4wjwo5o67o" path="res://assets/images/kitchen panel/misc/bnb_kitchen_bg_base.png" id="2_i5lbq"]
[ext_resource type="PackedScene" uid="uid://1bqnftirnc5q" path="res://scenes/end_of_level.tscn" id="3_j37xr"]
[ext_resource type="PackedScene" uid="uid://cf0ya1o4m6ooe" path="res://scenes/kitchen_panel/guidebook_menu.tscn" id="4_u524b"]
[ext_resource type="PackedScene" uid="uid://bek4j2yvgcwn8" path="res://scenes/main_menu/settings_menu.tscn" id="5_5uegq"]
[ext_resource type="Script" path="res://scripts/ui/settings_menu_level.gd" id="6_u1a7f"]
[ext_resource type="PackedScene" uid="uid://cor4f38g6u27x" path="res://scenes/pause_menu.tscn" id="7_5lwwb"]
[ext_resource type="Texture2D" uid="uid://cfr5y2legycov" path="res://assets/images/menu/notice_board/cork.png" id="7_agin5"]
[ext_resource type="Texture2D" uid="uid://c2tdqnsn53tw8" path="res://assets/images/kitchen panel/misc/bnb_clockbg.PNG" id="8_bcdoe"]
[ext_resource type="Texture2D" uid="uid://bu7w5ne2tplwm" path="res://assets/images/menu/notice_board/border_centre.png" id="8_qs34t"]
[ext_resource type="Texture2D" uid="uid://cns3adku4b2x4" path="res://assets/images/menu/notice_board/border_left.png" id="9_1i1gk"]
[ext_resource type="FontFile" uid="uid://cefw83v7a4qbq" path="res://assets/fonts/PixelOperator8.ttf" id="9_xnvvl"]
[ext_resource type="Script" path="res://scripts/kitchen_panel/timer.gd" id="10_6vkhq"]
[ext_resource type="Texture2D" uid="uid://dl5mgyycaevkj" path="res://assets/images/menu/notice_board/border_right.png" id="10_wqkp0"]
[ext_resource type="Script" path="res://scripts/customer_panel/money_container.gd" id="11_spih7"]
[ext_resource type="Texture2D" uid="uid://bcwlbm3ypyxxd" path="res://assets/images/customer panel/bnb_money_pile.png" id="12_btdww"]
[ext_resource type="PackedScene" uid="uid://cy2b17h1cvyh0" path="res://scenes/customer_panel/counter.tscn" id="13_gvvpr"]
[ext_resource type="Texture2D" uid="uid://bg8lbig0x5h82" path="res://assets/images/kitchen panel/misc/bnb_side_newest.PNG" id="14_2ujls"]
[ext_resource type="Texture2D" uid="uid://drhr6fyawp2hy" path="res://assets/images/buttons/bnb_settings.PNG" id="15_qgx4i"]
[ext_resource type="Script" path="res://scripts/ui/settings_button.gd" id="16_gumd4"]
[ext_resource type="Texture2D" uid="uid://cbuxcu7u4re48" path="res://assets/images/kitchen panel/misc/bnb_book_transp.png" id="17_1rg5c"]
[ext_resource type="Script" path="res://scripts/kitchen_panel/guide_book_button.gd" id="18_uyws3"]
[ext_resource type="Texture2D" uid="uid://b3lqedpdkdg6m" path="res://assets/images/buttons/bnb_pause.PNG" id="19_fl2xx"]
[ext_resource type="Script" path="res://scripts/ui/pause_button.gd" id="20_0s32t"]
[ext_resource type="Texture2D" uid="uid://c45tgc28i320x" path="res://assets/images/kitchen panel/misc/bnb_pullout_tab.PNG" id="21_0yt2a"]
[ext_resource type="Script" path="res://scripts/kitchen_panel/tea_drawer.gd" id="22_q5xrc"]
[ext_resource type="PackedScene" uid="uid://qwlm2ed31uqw" path="res://scenes/kitchen_panel/ingredient_scenes/camomille_tea.tscn" id="23_0b1q8"]
[ext_resource type="PackedScene" uid="uid://c22hnkdgad2kf" path="res://scenes/kitchen_panel/ingredient_scenes/fruit_tea.tscn" id="24_wmkuo"]
[ext_resource type="PackedScene" uid="uid://6xqcmsoeb0ot" path="res://scenes/kitchen_panel/ingredient_scenes/matcha_tea.tscn" id="25_8cd1w"]
[ext_resource type="PackedScene" uid="uid://bdfqj4iadnovk" path="res://scenes/kitchen_panel/ingredient_scenes/whipped_cream.tscn" id="26_0ftai"]
[ext_resource type="PackedScene" uid="uid://codola8g3qlei" path="res://scenes/kitchen_panel/ingredient_scenes/caramel.tscn" id="27_7mqes"]
[ext_resource type="PackedScene" uid="uid://cntx8otc6apaf" path="res://scenes/kitchen_panel/ingredient_scenes/honey.tscn" id="28_svlyh"]
[ext_resource type="PackedScene" uid="uid://ccfltk5xsbiqq" path="res://scenes/kitchen_panel/ingredient_scenes/lemon.tscn" id="29_pdwsv"]
[ext_resource type="PackedScene" uid="uid://bpbkfwvjt5smt" path="res://scenes/kitchen_panel/ingredient_scenes/cinnamon_sticks.tscn" id="30_8th0u"]
[ext_resource type="PackedScene" uid="uid://boegh6vo2j4ke" path="res://scenes/kitchen_panel/ingredient_scenes/seasonal.tscn" id="31_644q3"]
[ext_resource type="PackedScene" uid="uid://dms10yfki14n1" path="res://scenes/kitchen_panel/ingredient_scenes/liquor.tscn" id="32_1x5j1"]
[ext_resource type="Texture2D" uid="uid://bdktvt6ty53db" path="res://assets/images/kitchen panel/misc/bnb_topbar_newest.PNG" id="32_hcilo"]
[ext_resource type="PackedScene" uid="uid://btber43fpl6hi" path="res://scenes/kitchen_panel/ingredient_scenes/marshmallows.tscn" id="33_6qkac"]
[ext_resource type="PackedScene" uid="uid://daoj33obkgehj" path="res://scenes/kitchen_panel/ingredient_scenes/coffee_bean.tscn" id="34_fnoqv"]
[ext_resource type="PackedScene" uid="uid://boqghshkws7xv" path="res://scenes/kitchen_panel/ingredient_scenes/black_tea.tscn" id="35_17ntu"]
[ext_resource type="PackedScene" uid="uid://jyac1i82nd1l" path="res://scenes/kitchen_panel/ingredient_scenes/cocoa.tscn" id="36_8xijh"]
[ext_resource type="PackedScene" uid="uid://cpkyt4dom3j3v" path="res://scenes/kitchen_panel/ingredient_scenes/milk.tscn" id="37_35iex"]
[ext_resource type="PackedScene" uid="uid://do113ikliufn3" path="res://scenes/kitchen_panel/ingredient_scenes/mug.tscn" id="38_0kdno"]
[ext_resource type="PackedScene" uid="uid://dxtsd31kpgpvb" path="res://scenes/customer_panel/customer_panel.tscn" id="39_vtvvj"]
[ext_resource type="PackedScene" uid="uid://cikh8xovd5wod" path="res://scenes/kitchen_panel/machine_scenes/milk_jug.tscn" id="40_ci2jh"]
[ext_resource type="PackedScene" uid="uid://tx12kibrxlhe" path="res://scenes/kitchen_panel/machine_scenes/grinder.tscn" id="41_fiuyu"]
[ext_resource type="PackedScene" uid="uid://c6p8tde7gf4ur" path="res://scenes/kitchen_panel/machine_scenes/coffee_machine.tscn" id="42_eudgu"]
[ext_resource type="PackedScene" uid="uid://cywru0xulouqc" path="res://scenes/kitchen_panel/machine_scenes/group_handle.tscn" id="43_fumh1"]
[ext_resource type="PackedScene" uid="uid://xnigc2lo1y6n" path="res://scenes/kitchen_panel/machine_scenes/steam_wand.tscn" id="44_k8maw"]
[ext_resource type="PackedScene" uid="uid://de18hqi3hvdur" path="res://scenes/kitchen_panel/machine_scenes/frother.tscn" id="45_74fsf"]
[ext_resource type="PackedScene" uid="uid://ekoyd5v80o3n" path="res://scenes/kitchen_panel/machine_scenes/bin.tscn" id="46_67qg3"]
[ext_resource type="Script" path="res://scripts/kitchen_panel/bin.gd" id="47_a25ey"]
[ext_resource type="PackedScene" uid="uid://g4b5i07s3qtn" path="res://scenes/kitchen_panel/mug_ring.tscn" id="48_q8gw2"]
[ext_resource type="PackedScene" uid="uid://c67pq8jw0ro0q" path="res://scenes/kitchen_panel/mug_area.tscn" id="49_ufobs"]
[ext_resource type="Texture2D" uid="uid://broplvxjdtq3i" path="res://assets/images/kitchen panel/misc/bnb_kitchen_bg_spill.png" id="50_bnue1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wktt8"]
bg_color = Color(0.203922, 0.203922, 0.203922, 0.654902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dk2m"]

[sub_resource type="GDScript" id="GDScript_nqnjm"]
script/source = "extends Control

var doll

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	doll = %Doll

func get_doll() -> Node2D:
	return doll
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1par"]
bg_color = Color(0.933333, 0.6, 0.6, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_skcim"]
texture = ExtResource("8_bcdoe")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gxl8e"]
texture = ExtResource("14_2ujls")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3h4qw"]
texture = ExtResource("50_bnue1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4sqfi"]
texture = ExtResource("8_bcdoe")

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_p2g6v")

[node name="end_of_level_layer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="end_of_level" parent="end_of_level_layer" instance=ExtResource("3_j37xr")]

[node name="guidebook_layer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="guidebook_menu" parent="guidebook_layer" instance=ExtResource("4_u524b")]
unique_name_in_owner = true

[node name="SettingsLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Panel" type="Panel" parent="SettingsLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wktt8")

[node name="BgNoticeBoard" type="Control" parent="SettingsLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -760.0
offset_top = -440.0
offset_right = 760.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cork" type="TextureRect" parent="SettingsLayer/BgNoticeBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_right = -34.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_agin5")
expand_mode = 1
stretch_mode = 1

[node name="BorderCentre" type="TextureRect" parent="SettingsLayer/BgNoticeBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 82.0
offset_right = -83.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_qs34t")
expand_mode = 1

[node name="BorderLeft" type="TextureRect" parent="SettingsLayer/BgNoticeBoard"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 87.0171
grow_vertical = 2
texture = ExtResource("9_1i1gk")
expand_mode = 3

[node name="BorderRight" type="TextureRect" parent="SettingsLayer/BgNoticeBoard"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0171
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(87, 0)
texture = ExtResource("10_wqkp0")
expand_mode = 3

[node name="settings_menu" parent="SettingsLayer" instance=ExtResource("5_5uegq")]
unique_name_in_owner = true
offset_left = 240.0
offset_top = 135.0
offset_right = -240.0
offset_bottom = -135.0
script = ExtResource("6_u1a7f")

[node name="PauseLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="pause_menu" parent="PauseLayer" instance=ExtResource("7_5lwwb")]
unique_name_in_owner = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5dk2m")

[node name="CustomerPanel" parent="." instance=ExtResource("39_vtvvj")]
unique_name_in_owner = true
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_nqnjm")

[node name="MovementPanel" type="Panel" parent="CustomerPanel"]
z_index = 2
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -915.0
offset_right = -770.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxFlat_f1par")

[node name="MoneyContainer" type="Panel" parent="CustomerPanel"]
z_index = 5
layout_mode = 0
offset_left = 216.0
offset_top = 50.0
offset_right = 438.0
offset_bottom = 126.0
theme_override_styles/panel = SubResource("StyleBoxTexture_skcim")
script = ExtResource("11_spih7")

[node name="MoneyIcon" type="TextureRect" parent="CustomerPanel/MoneyContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -26.0
offset_right = -40.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_btdww")

[node name="MoneyLabel" type="RichTextLabel" parent="CustomerPanel/MoneyContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -13.0
offset_right = 86.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9_xnvvl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]0"

[node name="Counter" parent="CustomerPanel" instance=ExtResource("13_gvvpr")]
unique_name_in_owner = true
z_index = 5
position = Vector2(208, 983)

[node name="KitchenPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -540.0
offset_right = -360.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Mug" parent="KitchenPanel" instance=ExtResource("38_0kdno")]
unique_name_in_owner = true
z_index = 20
texture_filter = 1
position = Vector2(464, 771)

[node name="DrawerButton" type="TextureButton" parent="KitchenPanel"]
unique_name_in_owner = true
visible = false
z_index = 8
texture_filter = 1
layout_mode = 0
offset_left = 1058.0
offset_top = 372.0
offset_right = 1118.0
offset_bottom = 516.0
texture_normal = ExtResource("21_0yt2a")
stretch_mode = 0
script = ExtResource("22_q5xrc")

[node name="TeaDrawer" type="Panel" parent="KitchenPanel/DrawerButton"]
texture_filter = 1
layout_mode = 0
offset_left = 70.0
offset_top = -18.0
offset_right = 598.0
offset_bottom = 162.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gxl8e")

[node name="CamomilleTea" parent="KitchenPanel/DrawerButton/TeaDrawer" instance=ExtResource("23_0b1q8")]
position = Vector2(96, 90)

[node name="FruitTea" parent="KitchenPanel/DrawerButton/TeaDrawer" instance=ExtResource("24_wmkuo")]
position = Vector2(264, 90)

[node name="MatchaTea" parent="KitchenPanel/DrawerButton/TeaDrawer" instance=ExtResource("25_8cd1w")]
position = Vector2(432, 90)

[node name="Ingredients" type="Node2D" parent="KitchenPanel"]
z_index = 10

[node name="WhippedCream" parent="KitchenPanel/Ingredients" instance=ExtResource("26_0ftai")]
z_index = 1
position = Vector2(90.667, 96)

[node name="Caramel" parent="KitchenPanel/Ingredients" instance=ExtResource("27_7mqes")]
z_index = 1
position = Vector2(253.334, 96)

[node name="Honey" parent="KitchenPanel/Ingredients" instance=ExtResource("28_svlyh")]
z_index = 1
position = Vector2(416, 96)

[node name="Lemon" parent="KitchenPanel/Ingredients" instance=ExtResource("29_pdwsv")]
z_index = 1
position = Vector2(578.67, 96)

[node name="CinnamonSticks" parent="KitchenPanel/Ingredients" instance=ExtResource("30_8th0u")]
z_index = 1
position = Vector2(741.33, 96)

[node name="Seasonal" parent="KitchenPanel/Ingredients" instance=ExtResource("31_644q3")]
z_index = 1
position = Vector2(904, 96)

[node name="Liquor" parent="KitchenPanel/Ingredients" instance=ExtResource("32_1x5j1")]
z_index = 1
position = Vector2(1066.67, 96)

[node name="Marshmallows" parent="KitchenPanel/Ingredients" instance=ExtResource("33_6qkac")]
z_index = 1
position = Vector2(1229.34, 96)

[node name="Coffee" parent="KitchenPanel/Ingredients" instance=ExtResource("34_fnoqv")]
z_index = 1
position = Vector2(1224, 282)

[node name="BlackTea" parent="KitchenPanel/Ingredients" instance=ExtResource("35_17ntu")]
z_index = 1
position = Vector2(1224, 444)

[node name="Cocoa" parent="KitchenPanel/Ingredients" instance=ExtResource("36_8xijh")]
z_index = 1
position = Vector2(1224, 606)

[node name="Milk" parent="KitchenPanel/Ingredients" groups=["ingredient", "milkJug"] instance=ExtResource("37_35iex")]
z_index = 1
position = Vector2(1224, 768)

[node name="HorizontalPanel" type="TextureRect" parent="KitchenPanel"]
z_index = 9
layout_mode = 0
offset_right = 1320.0
offset_bottom = 192.0
texture = ExtResource("14_2ujls")

[node name="VerticalPanel" type="TextureRect" parent="KitchenPanel"]
z_index = 9
layout_mode = 0
offset_left = 1128.0
offset_top = 192.0
offset_right = 1320.0
offset_bottom = 858.0
texture = ExtResource("14_2ujls")

[node name="BottomPanel" type="TextureRect" parent="KitchenPanel"]
z_index = 9
layout_mode = 0
offset_top = 858.0
offset_right = 1320.0
offset_bottom = 1080.0
mouse_filter = 2
texture = ExtResource("32_hcilo")

[node name="PauseButton" type="TextureButton" parent="KitchenPanel"]
z_index = 9
texture_filter = 1
layout_mode = 0
offset_left = 976.0
offset_top = 902.545
offset_right = 1120.0
offset_bottom = 1046.54
texture_normal = ExtResource("19_fl2xx")
stretch_mode = 0
flip_v = true
script = ExtResource("20_0s32t")

[node name="SettingsButton" type="TextureButton" parent="KitchenPanel"]
z_index = 9
texture_filter = 1
layout_mode = 0
offset_left = 1150.0
offset_top = 902.545
offset_right = 1294.0
offset_bottom = 1046.54
texture_normal = ExtResource("15_qgx4i")
stretch_mode = 0
flip_v = true
script = ExtResource("16_gumd4")

[node name="GuideBookButton" type="TextureButton" parent="KitchenPanel"]
z_index = 9
texture_filter = 1
layout_mode = 0
offset_left = 521.0
offset_top = 888.0
offset_right = 905.0
offset_bottom = 1080.0
texture_normal = ExtResource("17_1rg5c")
stretch_mode = 0
script = ExtResource("18_uyws3")

[node name="Machines" type="Node2D" parent="KitchenPanel"]
z_index = 7

[node name="MilkJug" parent="KitchenPanel/Machines" instance=ExtResource("40_ci2jh")]
unique_name_in_owner = true
position = Vector2(740, 523)

[node name="Grinder" parent="KitchenPanel/Machines" instance=ExtResource("41_fiuyu")]
unique_name_in_owner = true
position = Vector2(941, 626)

[node name="CoffeeMachine" parent="KitchenPanel/Machines" instance=ExtResource("42_eudgu")]
unique_name_in_owner = true
position = Vector2(155, 324)

[node name="GroupHandle" parent="KitchenPanel/Machines" instance=ExtResource("43_fumh1")]
unique_name_in_owner = true
position = Vector2(892, 721)

[node name="SteamWand" parent="KitchenPanel/Machines" instance=ExtResource("44_k8maw")]
position = Vector2(350, 391)

[node name="Frother" parent="KitchenPanel/Machines" groups=["mug"] instance=ExtResource("45_74fsf")]
z_index = 1
texture_filter = 1
position = Vector2(680, 659)

[node name="Bin" parent="KitchenPanel/Machines" instance=ExtResource("46_67qg3")]
z_index = 10
position = Vector2(279, 984)
script = ExtResource("47_a25ey")

[node name="MugRing" parent="KitchenPanel/Machines" instance=ExtResource("48_q8gw2")]
position = Vector2(463, 803)

[node name="MugArea" parent="KitchenPanel/Machines" instance=ExtResource("49_ufobs")]
position = Vector2(120, 730)

[node name="Spill" type="Panel" parent="KitchenPanel/Machines"]
z_index = -10
texture_filter = 1
offset_left = 632.0
offset_top = 521.0
offset_right = 710.0
offset_bottom = 583.0
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxTexture_3h4qw")

[node name="TimerContainer" type="Panel" parent="KitchenPanel"]
z_index = 3
layout_mode = 0
offset_left = 768.0
offset_top = 190.0
offset_right = 1128.0
offset_bottom = 346.0
theme_override_styles/panel = SubResource("StyleBoxTexture_4sqfi")

[node name="TimeRemaining" type="RichTextLabel" parent="KitchenPanel/TimerContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -31.0
offset_right = 180.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9_xnvvl")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]00:00"
fit_content = true

[node name="Timer" type="Timer" parent="KitchenPanel/TimerContainer"]
unique_name_in_owner = true
process_callback = 0
one_shot = true
script = ExtResource("10_6vkhq")

[node name="backGround" type="TextureRect" parent="KitchenPanel"]
z_index = 2
layout_mode = 0
offset_top = 192.0
offset_right = 1128.0
offset_bottom = 858.0
texture = ExtResource("2_i5lbq")

[connection signal="pressed" from="KitchenPanel/DrawerButton" to="KitchenPanel/DrawerButton" method="drawer_press"]
[connection signal="pressed" from="KitchenPanel/PauseButton" to="KitchenPanel/PauseButton" method="_on_pressed"]
[connection signal="pressed" from="KitchenPanel/SettingsButton" to="KitchenPanel/SettingsButton" method="open_settings"]
[connection signal="pressed" from="KitchenPanel/GuideBookButton" to="KitchenPanel/GuideBookButton" method="open_guideBook"]
[connection signal="timeout" from="KitchenPanel/TimerContainer/Timer" to="KitchenPanel/TimerContainer/Timer" method="_on_timeout"]
